<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="24dp"
            tools:src="@drawable/momento" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/title_text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/login_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            tools:text="@string/login_title_text" />

        <com.nurhaqhalim.momento.components.MoEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="12dp"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/login_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="8dp"
            android:textColor="@color/title_text_color"
            android:textColorHint="@color/edit_text_hint_color" />

        <com.nurhaqhalim.momento.components.MoEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="12dp"
            android:drawableStart="@drawable/icon_lock"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/login_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingHorizontal="8dp"
            android:textColor="@color/title_text_color"
            android:textColorHint="@color/edit_text_hint_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/background_primary_button"
            android:enabled="false"
            android:fontFamily="@font/poppins"
            android:textColor="@color/orange"
            tools:text="@string/login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/edit_text_color"
            tools:text="@string/register_text_on_login" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingProgress"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading.json"
        app:lottie_loop="true" />

</androidx.constraintlayout.widget.ConstraintLayout>